[package]
name = "xca_ocsp_responder"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-governor = "0.8.0"
actix-web = "4"
anyhow = "1.0.99"
bytes = "1.10.1"
der = "0.7.10"
flate2 = "1.1.2"
hex = "0.4.3"
httpdate = "1.0.3"
moka = { version = "0.12.10", features = ["sync"] }
openssl = { version = "0.10.73", features = ["vendored"] }
ron = "0.11.0"
serde = "1.0.219"
spki = "0.7.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["sync"] }
x509-cert = "0.2.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
